add html and css files

--- a/index.html
+++ b/index.html
@@ -35,10 +35,8 @@
                 <h3 class="section-two_information-text">
                     Республика Башкортостан славится красотой своих рек и озер, величием гор и силой людей, живущих и защишающих честь своего родного края!</br>
                     Наша республика интересна богатой и красивой природой с самыми разнообразными ландшафтами, а также национальным колоритом.</br>
-                    Башкирия – рай для туристов. Здесь есть развлечения практически на любой вкус.
-                    Башкирию очень любят туристы-водники. Здесь много красивых рек, которые подойдут как любителям экстрима, так и семьям для спокойного отдыха. </br>
-                    Уникальный памятник природы и истории – Капова пещера с древними наскальными рисунками. Поскольку она находится в заповеднике «Шульган-Таш», посещение ограничено лишь первым гротом, а рисунки можно увидеть на реконструкциях. В этом же заповеднике можно получить представление о народном башкирском промысле – бортевом пчеловодстве.</br>
-                    Приглашаем посетить нашу замечательную республику!
+                    Башкирия – рай для туристов.</br> Здесь есть развлечения практически на любой вкус.
+                    
                 </h3>
             </div>
         </div>
